Fixed #34982 -- Fixed admin's read-only password widget and help texts alignment for tablet screen size.

--- a/django/contrib/admin/static/admin/css/widgets.css
+++ b/django/contrib/admin/static/admin/css/widgets.css
@@ -69,6 +69,7 @@
     padding: 0;
     overflow: hidden;
     line-height: 1;
+    min-width: auto;
 }
 
 .selector .selector-available input,
